--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,10 @@ body {
     width: 100vw;
     margin: 0 auto;
     padding: 0;
-    
+}
+
+body,
+.cell {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,4 +24,5 @@ body {
 
 .cell {
     background-color: rgb(255, 255, 255);
+
 }
