style: Align form elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,9 +17,15 @@ header {
 
 header,
 main,
-.cell {
+.cell,
+.start-container {
     display: flex;
     justify-content: center;
+}
+
+header,
+main,
+.cell {
     align-items: center;
     height: 100%;
     width: 100%;
@@ -32,6 +38,24 @@ main {
 
 main {
     grid-row: 2;
+    gap: 5rem;
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+input {
+    width: fit-content;
+    padding: 5px;
+    margin: 5px;
+}
+
+#start {
+    height: 2rem;
+    width: 100px;
+    margin: 5px;
 }
 
 .grid-container {
@@ -52,7 +76,6 @@ main {
     width: 50px;
     background-image: url("../images/refresh.svg");
     background-size: cover;
-    margin-top: 5rem;
 }
 
 .disable-pointer {
