--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,26 @@
+:root {
+    --bg-color: rgb(255, 222, 115);
+    --font-color: rgb(3, 84, 104);
+    --main-font: 'Secular One', sans-serif;
+    --second-font: 'Paytone One', sans-serif;
+    --large-font: 3rem;
+    --normal-font: 1.2rem;
+    --small-font: 1rem;
+}
+
+* {
+    color: var(--font-color);
+    font-family: var(--main-font);
+    font-size: var(--normal-font);
+}
+
 body {
     height: 100vh;
     width: 100vw;
     margin: 0 auto;
     padding: 0;
     grid-template-rows: 0.5fr 2fr;
+    background: var(--bg-color);
 }
 
 body,
@@ -13,6 +30,15 @@ body,
 
 header {
     grid-row: 1;
+}
+
+h1 {
+    font-size: var(--large-font);
+    margin: 0;
+}
+
+header > p {
+    font-family: var(--second-font);
 }
 
 header,
@@ -41,6 +67,10 @@ main {
     gap: 5rem;
 }
 
+form {
+    font-size: var(--small-font);
+}
+
 ul {
     list-style: none;
     padding-left: 0;
@@ -64,11 +94,11 @@ input {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 15px;
-    background-color: rgb(200, 200, 200);
+    background-color: var(--font-color);
 }
 
 .cell {
-    background-color: rgb(255, 255, 255);
+    background-color: var(--bg-color);
 }
 
 #reset {
