--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 :root {
-    --bg-color: rgb(255, 222, 115);
-    --font-color: rgb(3, 84, 104);
+    /* --bg-color: rgb(255, 222, 115); */
+    --bg-color: rgb(240, 232, 221);
+    --font-color: rgb(134, 150, 79);
     --main-font: 'Secular One', sans-serif;
     --second-font: 'Paytone One', sans-serif;
     --large-font: 3rem;
