--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ header {
 
 h1 {
     font-size: var(--large-font);
-    margin: 10% 0 0 0;
+    margin: var(--large-font) 0 0 0;
 }
 
 header > p {
