--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ header {
 
 h1 {
     font-size: var(--large-font);
-    margin: var(--large-font) 0 0 0;
+    margin: 3rem 0 0 0;
 }
 
 header > p {
@@ -119,6 +119,7 @@ input {
 
 .cell {
     background-color: var(--bg-color);
+    font-size: var(--large-font);
 }
 
 #reset {
