--- a/styles/style.css
+++ b/styles/style.css
@@ -3,11 +3,15 @@
     --font-color: rgb(134, 150, 79);
     --svg-filter-color: invert(50%) sepia(6%) saturate(1018%) hue-rotate(57deg) brightness(95%) contrast(91%);
     --hover-color: rgba(241, 239, 235, 0.3);
+    --hover-solid: rgb(226, 214, 191);
+    --red: rgb(220, 96, 107);
+    --blue: rgb(53, 109, 148);
     --main-font: 'Secular One', sans-serif;
     --second-font: 'Paytone One', sans-serif;
     --large-font: 3rem;
     --normal-font: 1.2rem;
     --small-font: 1rem;
+    --gap: 1rem;
 }
 
 * {
@@ -16,6 +20,7 @@
     font-size: var(--normal-font);
 }
 
+/* Styles for general layout */
 body {
     height: 100vh;
     width: 100vw;
@@ -56,8 +61,6 @@ header,
 main,
 .cell {
     align-items: center;
-    height: 100%;
-    width: 100%;
 }
 
 header,
@@ -69,22 +72,49 @@ main {
     grid-row: 2;
 }
 
-.form-container {
-    margin: 1rem;
+/* Styles for player names' form */
+form {
+    display: grid;
+    grid-column: repeat(2, 1fr);
+    gap: var(--gap);
 }
 
-form * {
+.player-one > *,
+.player-two > *,
+.start-container > * {
     font-size: var(--small-font);
 }
 
-td {
-    text-align: center;
-    vertical-align: middle;
-    margin: 5px;
+.player-one,
+.player-two {
+    grid-row: 1;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-input {
-    width: clamp(100px, 75%, 250px);
+.player-one {
+    grid-column: 1;
+}
+
+.player-two {
+    grid-column: 2;
+}
+
+/* Styles for button container */
+.button-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: var(--gap);
+}
+
+/* Styles for start game button */
+.start-container {
+    grid-column: 1 / span 2;
+    grid-row: 2;
 }
 
 #start,
@@ -108,6 +138,29 @@ input {
     margin: 5px;
 }
 
+/* Styles for player names */
+.player-names {
+    display: grid;
+    grid-column: repeat(2, 1fr);
+    gap: calc(var(--gap) * 5);
+}
+
+.p1,
+.p2 {
+    font-size: calc(var(--normal-font) * 1.5);
+}
+
+.p1 {
+    grid-column: 1;
+    color: var(--red);
+}
+
+.p2 {
+    grid-column: 2;
+    color: var(--blue);
+}
+
+/* Styles grid board for the game */
 .grid-container {
     height: 60%;
     width: clamp(300px, 60%, 450px);
@@ -122,10 +175,14 @@ input {
     font-size: var(--large-font);
 }
 
-#reset {
+#reset,
+.play-again {
     height: 55px;
-    width: 55px;
     margin-top: 2rem;
+}
+
+#reset {
+    width: 55px;
 }
 
 #reset > img {
@@ -134,6 +191,7 @@ input {
     background-size: cover;
 }
 
+/* Styles for misc. effects */
 .disable-pointer {
     pointer-events: none;
 }
